hphp/hack/test/typecheck/ppl/class_meth.php.exp
File "class_meth.php", line 8, characters 10-37:
class_meth cannot be used with a <<__PPL>> class (Typing[4272])
